# BokutachiIR_OpenLR2

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/: LR2_customir_api.h
src/: BokutachiIR.cpp
